--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,7 @@
+body, html{
+  overflow-x: hidden;
+}
+
 /*try to fix play button on mobile*/
 video::-webkit-media-controls-overlay-play-button {
   display: none;
