--- a/views/team.ejs
+++ b/views/team.ejs
@@ -56,30 +56,57 @@
         <div class="member1">
           <div class="m1-div">
 
-            <img class="member_pic1" src="https://i.imgur.com/Kr50HyO.png" />
-            <div class="pi-div">
-           <p class="pi">Principal Investigator</p>
-          </div>
+            <img class="member_pic1" src="https://i.imgur.com/TfiGQeO.png" />
+            
             </div>
             <div class="member-container">
 
             <h1 class="member-name">Joe Nassour, PhD</h1>
+            <h2 class = "member-name2">Principle Investigator</h2>
             <p class="team_desc">
-              Joe obtained his doctoral degree from the Institut Pasteur - University of Lille in France and further advanced his training by completing a postdoctoral fellowship at the Salk Institute for Biological Studies in the US.
-               Currently, he holds the position of Assistant Professor in the Department of Biochemistry and Molecular Genetics at the University of Colorado Anschutz Medical Campus. 
-            </p>
-          </div>
-          </div>
-         <div class="join-us">
-        
-           <h3>Join our growing team!</h3>
-          <p class = "join">We are constantly seeking talented and enthusiastic individuals to join our team. As a part of the University of Colorado School of Medicine, our lab is situated at the Anschutz Medical Campus, providing us with access to all the resources that the University of Colorado has to offer. In addition to being at the forefront of scientific research, Colorado is a breathtaking place to live, with plenty of outdoor activities and scenic beauty to explore.
+         <b> PhD: </b>Pasteur Institute - University of Lille, France <br>
+             <b>Postdoc:</b>   Salk Institute for Biological Studies, CA, US <br>
+            <b> Research interests:</b> Telomere functions in aging and cancer<br>
+            <b> Other interests: </b>Hiking, camping, and exploring new breweries
            
-          </br></br>If you are passionate about research and would like to explore exciting opportunities, we encourage you to reach out to us with your CV and a brief overview of your research interests.</p>
-          <img class ="growing" src="https://i.imgur.com/61UJ5uw.gif"/>
-        
-        </div>
-        </div>
+
+            </p> 
+            </div>
+          </div>
+
+          <div class="member1">
+            <div class="m1-div">
+  
+              <img class="member_pic1" src="https://i.imgur.com/plB4izT.png" />
+              
+              </div>
+              <div class="member-container">
+  
+              <h1 class="member-name">Abigail Gillespie, PhD  </h1>
+              <h2 class = "member-name2">Postdoctoral Fellow</h2>
+              <p class="team_desc">
+                <b>PhD: </b> University of California San Diego, CA, US<br>
+<b>Research interests:</b> DNA damage signaling pathways at telomeres and replicative aging <br>
+<b>Other interests:</b> Science outreach, running, reading, and going to the farmers' market
+              </p> </div>
+            </div>
+            <div class="member1">
+              <div class="m1-div">
+    
+                <img class="member_pic1" src="https://i.imgur.com/ELi4H97.png" />
+                
+                </div>
+                <div class="member-container">
+    
+                <h1 class="member-name">Rachid Boutoual, PhD  </h1>
+                <h2 class = "member-name2">Postdoctoral Fellow</h2>
+                <p class="team_desc">
+                  <b >PhD: </b>University of Abdelmalek Essaadi, Morocco and the Principe Felipe Research Center, Spain <br>
+<b>Postdoc: </b>The Buck Institute for Research on Aging, CA, US <br>
+<b>Research interests:</b> Crosstalk between telomeres and mitochondria and innate immunity     <br>
+<b>Other interests:</b>    Soccer, hiking, and exploring new places
+</p>  </div>
+         
     
     
     </body>
