--- a/views/team.ejs
+++ b/views/team.ejs
@@ -64,10 +64,10 @@
             <h1 class="member-name">Joe Nassour, PhD</h1>
             <h2 class = "member-name2">Principle Investigator</h2>
             <p class="team_desc">
-         <b> PhD: </b>Pasteur Institute - University of Lille, France <br>
-             <b>Postdoc:</b>   Salk Institute for Biological Studies, CA, US <br>
-            <b> Research interests:</b> Telomere functions in aging and cancer<br>
-            <b> Other interests: </b>Hiking, camping, and exploring new breweries
+         <span> PhD: </span>Pasteur Institute - University of Lille, France <br>
+         <span>Postdoc:</span>   Salk Institute for Biological Studies, CA, US <br>
+          <span> Research interests:</span> Telomere functions in aging and cancer<br>
+            <span> Other interests: </span>Hiking, camping, and exploring new breweries
            
 
             </p> 
@@ -80,15 +80,16 @@
               <img class="member_pic1" src="https://i.imgur.com/plB4izT.png" />
               
               </div>
-              <div class="member-container">
+            <div class="member-container">
   
               <h1 class="member-name">Abigail Gillespie, PhD  </h1>
               <h2 class = "member-name2">Postdoctoral Fellow</h2>
               <p class="team_desc">
-                <b>PhD: </b> University of California San Diego, CA, US<br>
-<b>Research interests:</b> DNA damage signaling pathways at telomeres and replicative aging <br>
-<b>Other interests:</b> Science outreach, running, reading, and going to the farmers' market
-              </p> </div>
+                <span>PhD: </span> University of California San Diego, CA, US<br>
+                <span>Research interests:</span> DNA damage signaling pathways at telomeres and replicative aging <br>
+                <span>Other interests:</span> Science outreach, running, reading, and going to the farmers' market
+              </p> 
+            </div>
             </div>
             <div class="member1">
               <div class="m1-div">
@@ -101,13 +102,14 @@
                 <h1 class="member-name">Rachid Boutoual, PhD  </h1>
                 <h2 class = "member-name2">Postdoctoral Fellow</h2>
                 <p class="team_desc">
-                  <b >PhD: </b>University of Abdelmalek Essaadi, Morocco and the Principe Felipe Research Center, Spain <br>
-<b>Postdoc: </b>The Buck Institute for Research on Aging, CA, US <br>
-<b>Research interests:</b> Crosstalk between telomeres and mitochondria and innate immunity     <br>
-<b>Other interests:</b>    Soccer, hiking, and exploring new places
-</p>  </div>
+                  <span>PhD: </span>University of Abdelmalek Essaadi, Morocco and the Principe Felipe Research Center, Spain <br>
+                    <span>Postdoc: </span>The Buck Institute for Research on Aging, CA, US <br>
+                    <span>Research interests:</span> Crosstalk between telomeres and mitochondria and innate immunity     <br>
+                    <span>Other interests:</span>    Soccer, hiking, and exploring new places
+                </p>  
+              </div>
          
-    
+            </div>
     
     </body>
 
