--- a/views/team.ejs
+++ b/views/team.ejs
@@ -94,7 +94,7 @@
             <div class="member1">
               <div class="m1-div">
     
-                <img class="member_pic1" src="https://i.imgur.com/ELi4H97.png" />
+                <img class="member_pic1" src="https://i.imgur.com/yDUW1zh.png" />
                 
                 </div>
                 <div class="member-container">
