--- a/views/team.ejs
+++ b/views/team.ejs
@@ -56,7 +56,7 @@
         <div class="member1">
           <div class="m1-div">
 
-            <img class="member_pic1" src="https://i.imgur.com/l8mUjSX.png" />
+            <img class="member_pic1" src="https://i.imgur.com/SPpbJy7.png" />
             
             </div>
             <div class="member-container">
@@ -77,7 +77,7 @@
           <div class="member1">
             <div class="m1-div">
   
-              <img class="member_pic1" src="https://i.imgur.com/plB4izT.png" />
+              <img class="member_pic1" src="https://i.imgur.com/ElKGWQ1.png" />
               
               </div>
             <div class="member-container">
@@ -94,7 +94,7 @@
             <div class="member1">
               <div class="m1-div">
     
-                <img class="member_pic1" src="https://i.imgur.com/yDUW1zh.png" />
+                <img class="member_pic1" src="https://i.imgur.com/o4zNibx.png" />
                 
                 </div>
                 <div class="member-container">
