--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -400,7 +400,8 @@ height: 50%;
 .member_pic1 {
 
   border-radius: 0%;
-    
+    height:100;
+    width:100;
     margin-bottom:0;
     margin-top:10vh;
    
