--- a/views/team.ejs
+++ b/views/team.ejs
@@ -56,7 +56,7 @@
         <div class="member1">
           <div class="m1-div">
 
-            <img class="member_pic1" src="https://i.imgur.com/SPpbJy7.png" />
+            <img class="member_pic1" src="https://i.imgur.com/jCnYvyN.png" />
             
             </div>
             <div class="member-container">
