--- a/views/team.ejs
+++ b/views/team.ejs
@@ -62,7 +62,7 @@
             <div class="member-container">
 
             <h1 class="member-name">Joe Nassour, PhD</h1>
-            <h2 class = "member-name2">Principle Investigator</h2>
+            <h2 class = "member-name2">Principal Investigator</h2>
             <p class="team_desc">
          <span> PhD: </span>Pasteur Institute - University of Lille, France <br>
          <span>Postdoc:</span>   Salk Institute for Biological Studies, CA, US <br>
