--- a/views/publications.ejs
+++ b/views/publications.ejs
@@ -47,6 +47,31 @@
       2023
 
     </h1>
+
+    <a class="pub-click"
+    onclick="window.open ('https://www.sciencedirect.com/science/article/pii/S1568786423001453?via%3Dihub', ''); return false"
+    href="javascript:void(0);"
+    >  
+<h2 class="pub-title">
+  Telomeres as hotspots for innate immunity and inflammation.</h2>
+      </a>
+      Nassour J, Przetocka S, Karlseder J. DNA Repair 2023. PMID: 37951043.
+
+
+      <a class="pub-click"
+      onclick="window.open ('https://en.bio-protocol.org/en/bpdetail?id=4612&type=0', ''); return false"
+      href="javascript:void(0);"
+      >  
+  <h2 class="pub-title">
+    Flow Cytometry-based Method for Efficient Sorting of Senescent Cells.</h2>
+        </a>
+        Goy E, Martin N, Drullion C, Saas L, Molendi-Coste O, Pineau L, Dombrowicz D, Deruy E, Bauderlique-Le-Roy H, Samyn O, Nassour J, De Launoit Y, Abbadie C. Bio Protoc 2023. PMID: 37056241.
+
+
+
+
+
+
     <a class="pub-click"
     onclick="window.open ('https://www.cell.com/iscience/fulltext/S2589-0042(23)00482-0', ''); return false"
     href="javascript:void(0);"
