--- a/views/team.ejs
+++ b/views/team.ejs
@@ -67,7 +67,7 @@
          <span> PhD: </span>Pasteur Institute - University of Lille, France <br>
          <span>Postdoc:</span>   Salk Institute for Biological Studies, CA, US <br>
           <span> Research interests:</span> Telomere functions in aging and cancer<br>
-            <span> Other interests: </span>Hiking, camping, and exploring new breweries
+            <span> Other interests: </span>Hiking, camping, and exploring new breweries 
            
 
             </p> 
@@ -110,11 +110,31 @@
               </div>
          
             </div>
+            <div class="member1">
+              <div class="m1-div">
+    
+                <img class="member_pic1" src="https://i.imgur.com/Qs9wPf2.png" />
+                
+                </div>
+                <div class="member-container">
+    
+                <h1 class="member-name">Christopher Boone</h1>
+                <h2 class = "member-name2">Senior PRA</h2>
+                <p class="team_desc">
+                  <span>BA: </span>Dartmouth College, US <br>
+                    
+                    <span>Research interests:</span> Dual role of autophagy in cancer   <br>
+                    <span>Other interests:</span>   Basketball, golf, and grilling
+                </p>  
+              </div>
+         
+            </div>
+      </div>
     
     </body>
 
 
   </section>
   <%- include('./partials/footer') %>
-  </div>
+ 
 </html>
