--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -480,7 +480,7 @@ font-size: 2.9vh;
 }
 .team-pg{
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   margin-right: 10vh;
   
  
@@ -505,6 +505,7 @@ span {
     display:grid;
     grid-template-columns: 1fr;
     margin:auto;
+
     position: relative;
     width: 80%;
     justify-content: center;
