--- a/views/team.ejs
+++ b/views/team.ejs
@@ -129,6 +129,26 @@
               </div>
          
             </div>
+
+            <div class="member1">
+              <div class="m1-div">
+    
+                <img class="member_pic_foxy" src="https://i.imgur.com/GzGxuDo.png" />
+                
+                </div>
+                <div class="member-container">
+    
+                <h1 class="member-name">Foxy</h1>
+                <h2 class = "member-name2">Junior Support</h2>
+                <p class="team_desc">
+                  <span>BA: </span>Family Pupz Dog Training - Denver, CO <br>
+                    
+                    <span>Research interests:</span> Telomeres can function as a tumor suppressor, but can they also: sit, stay and drop it? I can.  <br>
+                    <span>Other interests:</span>   Snow, the cat, shoes, and treats.
+                </p>  
+              </div>
+         
+            </div>
       </div>
     
     </body>
