--- a/views/team.ejs
+++ b/views/team.ejs
@@ -133,7 +133,7 @@
             <div class="member1">
               <div class="m1-div">
     
-                <img class="member_pic_foxy" src="https://i.imgur.com/GzGxuDo.png" />
+                <img class="member_pic_foxy" src="https://i.imgur.com/XyzQEA2.jpg" />
                 
                 </div>
                 <div class="member-container">
