--- a/views/team.ejs
+++ b/views/team.ejs
@@ -121,7 +121,7 @@
                 <h1 class="member-name">Christopher Boone</h1>
                 <h2 class = "member-name2">Senior PRA</h2>
                 <p class="team_desc">
-                  <span>BA: </span>Dartmouth College, US <br>
+                  <span>BS: </span>Dartmouth College, US <br>
                     
                     <span>Research interests:</span> Dual role of autophagy in cancer   <br>
                     <span>Other interests:</span>   Basketball, golf, and grilling
@@ -141,7 +141,7 @@
                 <h1 class="member-name">Foxy</h1>
                 <h2 class = "member-name2">Junior Support</h2>
                 <p class="team_desc">
-                  <span>BA: </span>Family Pupz Dog Training - Denver, CO <br>
+                  <span>BS: </span>Family Pupz Dog Training - Denver, CO <br>
                     
                     <span>Research interests:</span> Telomeres can function as a tumor suppressor, but can they also: sit, stay and drop it? I can.  <br>
                     <span>Other interests:</span>   Snow, the cat, shoes, and treats.
