--- a/views/team.ejs
+++ b/views/team.ejs
@@ -144,7 +144,7 @@
                   <span>B.S.: </span>Family Pupz Dog Training - Denver, CO <br>
                     
                     <span>Research interests:</span> Telomeres can function as a tumor suppressor, but can they also: sit, stay and drop it? I can.  <br>
-                    <span>Other interests:</span>   Snow, the cat, shoes, and treats.
+                    <span>Other interests:</span>  Treats
                 </p>  
               </div>
          
