--- a/views/team.ejs
+++ b/views/team.ejs
@@ -104,8 +104,27 @@
                 <p class="team_desc">
                   <span>PhD: </span>University of Abdelmalek Essaadi, Morocco and the Principe Felipe Research Center, Spain <br>
                     <span>Postdoc: </span>The Buck Institute for Research on Aging, CA, US <br>
-                    <span>Research interests:</span> Crosstalk between telomeres and mitochondria and innate immunity     <br>
+                    <span>Research interests:</span> Telomere-mitochondrial crosstalk and innate immunity    <br>
                     <span>Other interests:</span>    Soccer, hiking, and exploring new places
+                </p>  
+              </div>
+         
+            </div>
+            <div class="member1">
+              <div class="m1-div">
+    
+                <img class="member_pic1" src="https://i.imgur.com/APJpT0C.png" />
+                
+                </div>
+                <div class="member-container">
+    
+                <h1 class="member-name">Remington Hoerr, PhD</h1>
+                <h2 class = "member-name2">Postdoctoral Fellow</h2>
+                <p class="team_desc">
+                  <span>PhD: </span>Vanderbilt University Nashville, TN, US<br>
+                    
+                    <span>Research interests:</span> TERRA signaling and functions in aging and cancer  <br>
+                    <span>Other interests:</span>   Big Brother, embroidery, podcasts, and coffee shops
                 </p>  
               </div>
          
@@ -119,9 +138,9 @@
                 <div class="member-container">
     
                 <h1 class="member-name">Christopher Boone</h1>
-                <h2 class = "member-name2">Senior PRA</h2>
+                <h2 class = "member-name2">PRA</h2>
                 <p class="team_desc">
-                  <span>B.S.: </span>Dartmouth College, US <br>
+                  <span>B.S.: </span>Dartmouth College, NH, US <br>
                     
                     <span>Research interests:</span> Dual role of autophagy in cancer   <br>
                     <span>Other interests:</span>   Basketball, golf, and grilling
@@ -130,25 +149,7 @@
          
             </div>
 
-            <div class="member1">
-              <div class="m1-div">
-    
-                <img class="member_pic_foxy" src="https://i.imgur.com/XyzQEA2.jpg" />
-                
-                </div>
-                <div class="member-container">
-    
-                <h1 class="member-name">Foxy</h1>
-                <h2 class = "member-name2">Junior Support</h2>
-                <p class="team_desc">
-                  <span>B.S.: </span>Family Pupz Dog Training - Denver, CO <br>
-                    
-                    <span>Research interests:</span> Telomeres can function as a tumor suppressor, but can they also: sit, stay and drop it? I can.  <br>
-                    <span>Other interests:</span>  Treats
-                </p>  
-              </div>
-         
-            </div>
+            
       </div>
     
     </body>
