--- a/views/team.ejs
+++ b/views/team.ejs
@@ -149,7 +149,44 @@
          
             </div>
 
-            
+            <div class="member1">
+              <div class="m1-div">
+    
+                <img class="member_pic1" src="https://i.imgur.com/R7PD6gu.png" />
+                
+                </div>
+                <div class="member-container">
+    
+                <h1 class="member-name">Richard Wang</h1>
+                <h2 class = "member-name2">PRA</h2>
+                <p class="team_desc">
+                  <span>B.S.: </span>Emory University, GA, US <br>
+                    
+                    <span>Research interests:</span> Telomere dynamics and inflammation   <br>
+                    <span>Other interests:</span>   Running, climbing, impromptu road trips, piano, and folk music
+                </p>  
+              </div>
+         
+            </div>
+            <div class="member1">
+              <div class="m1-div">
+    
+                <img class="member_pic1" src="https://i.imgur.com/sa3m6JE.png" />
+                
+                </div>
+                <div class="member-container">
+    
+                <h1 class="member-name">Selena Martinez</h1>
+                <h2 class = "member-name2">Rotation student - Biomedical Sciences Program</h2>
+                <p class="team_desc">
+                  <span>B.S.: </span>Michigan State University, MI, US <br>
+                    
+                    <span>Research interests:</span> Mitochondrial signaling in cancer  <br>
+                    <span>Other interests:</span>   Cooking, hiking, paddle boarding, live music, volunteering
+                </p>  
+              </div>
+         
+            </div>    
       </div>
     
     </body>
