--- a/views/team.ejs
+++ b/views/team.ejs
@@ -187,6 +187,25 @@
               </div>
          
             </div>    
+            <div class="member1">
+              <div class="m1-div">
+    
+                <img class="member_pic1" src="https://i.imgur.com/UZLKjpk.png" />
+                
+                </div>
+                <div class="member-container">
+    
+                <h1 class="member-name">Alexander Beacom</h1>
+                <h2 class = "member-name2">Rotation student - Cancer Biology Program</h2>
+                <p class="team_desc">
+                  <span>B.S.: </span>University of Notre Dame, IN, US <br>
+                    
+                    <span>Research interests:</span>Key signaling differences between anti- and pro-tumor autophagy  <br>
+                    <span>Other interests:</span>   Hiking, snowboarding, and cooking/baking
+                </p>  
+              </div>
+         
+            </div>    
       </div>
     
     </body>
