--- a/views/team.ejs
+++ b/views/team.ejs
@@ -200,7 +200,7 @@
                 <p class="team_desc">
                   <span>B.S.: </span>University of Notre Dame, IN, US <br>
                     
-                    <span>Research interests:</span>Key signaling differences between anti- and pro-tumor autophagy  <br>
+                    <span>Research interests:</span> &nbsp Key signaling differences between anti- and pro-tumor autophagy  <br>
                     <span>Other interests:</span>   Hiking, snowboarding, and cooking/baking
                 </p>  
               </div>
