--- a/views/team.ejs
+++ b/views/team.ejs
@@ -64,10 +64,10 @@
             <h1 class="member-name">Joe Nassour, PhD</h1>
             <h2 class = "member-name2">Principal Investigator</h2>
             <p class="team_desc">
-         <span> PhD: </span>Pasteur Institute - University of Lille, France <br>
+         <span> PhD: </span>Pasteur Institute - France <br>
          <span>Postdoc:</span>   Salk Institute for Biological Studies, CA, US <br>
           <span> Research interests:</span> Telomere functions in aging and cancer<br>
-            <span> Other interests: </span>Hiking, camping, and exploring new breweries 
+            <span> Other interests: </span>Hiking, camping, exploring new breweries
            
 
             </p> 
@@ -177,7 +177,7 @@
                 <div class="member-container">
     
                 <h1 class="member-name">Selena Martinez</h1>
-                <h2 class = "member-name2">Rotation student - Biomedical Sciences Program</h2>
+                <h2 class = "member-name2">PhD Student</h2>
                 <p class="team_desc">
                   <span>B.S.: </span>Michigan State University, MI, US <br>
                     
@@ -196,7 +196,7 @@
                 <div class="member-container">
     
                 <h1 class="member-name">Alexander Beacom</h1>
-                <h2 class = "member-name2">Rotation student - Cancer Biology Program</h2>
+                <h2 class = "member-name2">PhD Student</h2>
                 <p class="team_desc">
                   <span>B.S.: </span>University of Notre Dame, IN, US <br>
                     
