--- a/views/philosophy.ejs
+++ b/views/philosophy.ejs
@@ -35,10 +35,7 @@
       <div class = "philo-title"><h1 class="h1-title">PHILOSOPHY</h1></div>
       <div class="philo_main">
         <p class="philo">
-          Our lab strives to make a positive impact on humanity by addressing
-          important issues with bold and innovative thinking. We prioritize high
-          ethical and inclusive standards and value diverse backgrounds,
-          approaches, and thoughts.
+          OUR LAB EMBRACES INCLUSIVITY AND VALUES DIVERSE BACKGROUNDS, APPROACHES, AND PERSPECTIVES
         </p>
       </div>
 
@@ -52,48 +49,17 @@
     <section class="main2-philo">
       <h3 class="exp">Expectations of Postdocs</h3>
       <p class="philo-exp">
-        At our lab, we value a supportive and collaborative environment, where
-        postdoctoral colleagues are encouraged to build strong relationships
-        with their team members. We look for individuals who possess inquisitive
-        minds and critical thinking skills, who are not afraid to tackle complex
-        questions, and who are ambitious yet humble enough to take pride in the
-        success of others. We seek postdocs who are communicative and eager to
-        learn the skills that are essential to succeed in the scientific
-        community, while also sharing their own expertise with the lab. Although
-        postdocs will have their own projects, they are expected to support one
-        another in their research endeavors, attending scientific conferences,
-        giving presentations, and openly communicating their concerns and asking
-        for guidance when needed.
+        At our lab, we prioritize a supportive and collaborative environment. We seek individuals with inquisitive minds and strong critical thinking skills, who are fearless in addressing complex questions and humble enough to celebrate the success of others. We look for postdocs who are eager to learn new scientific skills, and willing to share their expertise with the lab. While each postdoc will have their own projects, they are expected to support one another in research, attend conferences, give presentations, and openly seek guidance when needed.
       </p>
 
       <h3 class="exp">Expectations of Graduate Students</h3>
       <p class="philo-exp">
-        We seek graduate students who are passionate about exploring new areas
-        of science and approach our lab with an open mind. We value an eagerness
-        to learn from both successful and unsuccessful experiments, as we
-        believe that failures can be just as informative as successes. Graduate
-        students will be responsible for their own research projects, with
-        support and guidance from postdoctoral colleagues. We encourage students
-        to attend scientific conferences and develop their presentation skills
-        at all levels. Asking questions and seeking guidance is an essential
-        aspect of scientific training. We expect graduate students to
-        communicate their concerns openly and ask for help when needed, as this
-        is a key to achieving success in our lab.
+        We seek graduate students passionate about exploring new scientific areas with an open mind. We value eagerness to learn from both successful and unsuccessful experiments, believing failures can be as informative as successes. Graduate students will lead their own research projects with support from myself and postdoctoral colleagues. We encourage attending scientific conferences, developing presentation skills, and openly communicating concerns and seeking guidance, as this is key to success in our lab.
       </p>
 
       <h3 class="exp">Expectations of PI</h3>
       <p class="philo-exp">
-        As your supervisor, I am committed to supporting your career growth and
-        development from the moment you consider joining our lab, throughout
-        your tenure, and even after you leave to pursue new opportunities. I
-        value open communication and appreciate feedback, as it helps me to
-        continually improve my role as a PI. My door is always open, and I am
-        available to provide guidance and support whenever you need it. However,
-        I also expect you to communicate with me when you require my input. I
-        prioritize the well-being of all members of my laboratory, and I am
-        committed to supporting your personal and professional growth. Please
-        know that I am invested in your success, and I will work with you to
-        help you achieve your goals. 
+        As your supervisor, I am dedicated to supporting your career growth and development from the moment you consider joining our lab, throughout your tenure, and beyond. I value open communication and welcome feedback to improve my role as a PI. My door is always open to provide guidance and support, but I also expect you to reach out when you need my input. I prioritize the well-being of all lab members and am committed to your personal and professional growth. Know that I am invested in your success and will work with you to achieve your goals.
       </p>
     </section>
     <%- include('./partials/footer') %>
