--- a/views/team.ejs
+++ b/views/team.ejs
@@ -35,8 +35,7 @@
 
       <p class="philo">
 
-        Join our team to work on creative projects focused on telomere biology, autophagy, and innate immune signaling.
-      </p>
+        JOIN OUR TEAM TO EXPLORE TELOMERE BIOLOGY, AUTOPHAGY, GENOMIC INSTABILITY, AND INNATE IMMUNITY      </p>
     </div>
 
 
