--- a/views/team.ejs
+++ b/views/team.ejs
@@ -55,7 +55,7 @@
         <div class="member1">
           <div class="m1-div">
 
-            <img class="member_pic1" src="https://i.imgur.com/jCnYvyN.png" />
+            <img class="member_pic1" src="https://i.imgur.com/xR3DBWd.jpeg" />
             
             </div>
             <div class="member-container">
@@ -76,7 +76,7 @@
           <div class="member1">
             <div class="m1-div">
   
-              <img class="member_pic1" src="https://i.imgur.com/ElKGWQ1.png" />
+              <img class="member_pic1" src="https://i.imgur.com/QDw4azs.jpeg" />
               
               </div>
             <div class="member-container">
@@ -93,7 +93,7 @@
             <div class="member1">
               <div class="m1-div">
     
-                <img class="member_pic1" src="https://i.imgur.com/o4zNibx.png" />
+                <img class="member_pic1" src="https://i.imgur.com/F7r54wB.jpeg" />
                 
                 </div>
                 <div class="member-container">
@@ -112,7 +112,7 @@
             <div class="member1">
               <div class="m1-div">
     
-                <img class="member_pic1" src="https://i.imgur.com/APJpT0C.png" />
+                <img class="member_pic1" src="https://i.imgur.com/79Rv8K6.jpeg" />
                 
                 </div>
                 <div class="member-container">
@@ -131,7 +131,7 @@
             <div class="member1">
               <div class="m1-div">
     
-                <img class="member_pic1" src="https://i.imgur.com/Qs9wPf2.png" />
+                <img class="member_pic1" src="https://i.imgur.com/4CPN2j0.jpeg" />
                 
                 </div>
                 <div class="member-container">
@@ -151,7 +151,7 @@
             <div class="member1">
               <div class="m1-div">
     
-                <img class="member_pic1" src="https://i.imgur.com/R7PD6gu.png" />
+                <img class="member_pic1" src="https://i.imgur.com/YiOS7WI.jpeg" />
                 
                 </div>
                 <div class="member-container">
@@ -170,7 +170,7 @@
             <div class="member1">
               <div class="m1-div">
     
-                <img class="member_pic1" src="https://i.imgur.com/sa3m6JE.png" />
+                <img class="member_pic1" src="https://i.imgur.com/tmdAjbb.jpeg" />
                 
                 </div>
                 <div class="member-container">
@@ -189,7 +189,7 @@
             <div class="member1">
               <div class="m1-div">
     
-                <img class="member_pic1" src="https://i.imgur.com/UZLKjpk.png" />
+                <img class="member_pic1" src="https://i.imgur.com/DU4B6Va.jpeg" />
                 
                 </div>
                 <div class="member-container">
