--- a/views/team.ejs
+++ b/views/team.ejs
@@ -47,15 +47,17 @@
       </video>
     </div>
   </section>
-  <section class="team-main">
-    <body>
-     
-      <div class = "team-pg">
 
+   
+    <body>
+      
+    <section class="team-main">
+      <div class = "team-pg">
+        
         <div class="member1">
           <div class="m1-div">
 
-            <img class="member_pic1" src="https://i.imgur.com/xR3DBWd.jpeg" />
+            <img class="member_pic1" src="https://i.imgur.com/EGrMp2g.png" />
             
             </div>
             <div class="member-container">
@@ -76,7 +78,7 @@
           <div class="member1">
             <div class="m1-div">
   
-              <img class="member_pic1" src="https://i.imgur.com/QDw4azs.jpeg" />
+              <img class="member_pic1" src=" https://i.imgur.com/YEeFr9y.png" />
               
               </div>
             <div class="member-container">
@@ -93,7 +95,7 @@
             <div class="member1">
               <div class="m1-div">
     
-                <img class="member_pic1" src="https://i.imgur.com/F7r54wB.jpeg" />
+                <img class="member_pic1" src="https://i.imgur.com/imm7j9K.png" />
                 
                 </div>
                 <div class="member-container">
@@ -112,7 +114,7 @@
             <div class="member1">
               <div class="m1-div">
     
-                <img class="member_pic1" src="https://i.imgur.com/79Rv8K6.jpeg" />
+                <img class="member_pic1" src="https://i.imgur.com/o1R6A3v.png" />
                 
                 </div>
                 <div class="member-container">
@@ -128,49 +130,13 @@
               </div>
          
             </div>
-            <div class="member1">
-              <div class="m1-div">
-    
-                <img class="member_pic1" src="https://i.imgur.com/4CPN2j0.jpeg" />
-                
-                </div>
-                <div class="member-container">
-    
-                <h1 class="member-name">Christopher Boone</h1>
-                <h2 class = "member-name2">PRA</h2>
-                <p class="team_desc">
-                  <span>B.S.: </span>Dartmouth College, NH, US <br>
-                    
-                    <span>Research interests:</span> Dual role of autophagy in cancer   <br>
-                    <span>Other interests:</span>   Basketball, golf, and grilling
-                </p>  
-              </div>
-         
-            </div>
+            
 
+            
             <div class="member1">
               <div class="m1-div">
     
-                <img class="member_pic1" src="https://i.imgur.com/YiOS7WI.jpeg" />
-                
-                </div>
-                <div class="member-container">
-    
-                <h1 class="member-name">Richard Wang</h1>
-                <h2 class = "member-name2">PRA</h2>
-                <p class="team_desc">
-                  <span>B.S.: </span>Emory University, GA, US <br>
-                    
-                    <span>Research interests:</span> Telomere dynamics and inflammation   <br>
-                    <span>Other interests:</span>   Running, climbing, impromptu road trips, piano, and folk music
-                </p>  
-              </div>
-         
-            </div>
-            <div class="member1">
-              <div class="m1-div">
-    
-                <img class="member_pic1" src="https://i.imgur.com/tmdAjbb.jpeg" />
+                <img class="member_pic1" src="https://i.imgur.com/kwtkfEI.png" />
                 
                 </div>
                 <div class="member-container">
@@ -189,7 +155,7 @@
             <div class="member1">
               <div class="m1-div">
     
-                <img class="member_pic1" src="https://i.imgur.com/DU4B6Va.jpeg" />
+                <img class="member_pic1" src="https://i.imgur.com/LIovu1w.png" />
                 
                 </div>
                 <div class="member-container">
