--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -496,6 +496,25 @@ grid-template-rows: 85vh 100vh;
   
  
 }
+.team-photo{
+  background-color: #C9DCF5;
+  margin-bottom: 0;
+  padding-bottom: 0;
+  width: 100vw;
+  height: 75vh;
+  
+  font-size: 1.5vw;
+  scroll-behavior: smooth;
+  display: flex;
+  justify-content: center;
+}
+.team-pic{
+  margin-top: 10vh;
+margin-bottom: 5vh;
+}
+  
+ 
+
 span {
   font-weight: bolder;
   font-size: 2.7vh;
