--- a/views/index.ejs
+++ b/views/index.ejs
@@ -78,33 +78,23 @@
     <section class="main2" id="home">
       <h2 class="about-title">ABOUT</h2>
       <p class="about1">
-        Cancer emerges due to genetic and epigenetic changes that accumulate in
-        somatic cells, allowing them to evade normal proliferation limits and
-        attain immortality. Our laboratory studies various aspects of telomere
-        biology, with a specific focus on understanding how the shortening of
-        telomeres during replicative aging creates barriers to cell
-        proliferation and restricts the development of cancer.
+        Most cancers arise through an evolutionary process, as genetic and epigenetic changes accumulate in somatic cells, allowing them to escape the proliferative restraints that control cell growth. Our lab studies various aspects of telomere biology, with a focus on understanding how dysfunctional telomeres create barriers to cell proliferation and restrict the development of cancer.
       </p>
       <p class="about3">
-        Our research entails a combination of advanced techniques in cell
-        biology, molecular biology, and single-cell multiomics to explore the
-        interplay between telomere function, innate immune signaling, and
-        autophagy, and how these pathways work together to suppress the early
-        stages of tumor development. Our overarching goal is to deepen our
-        understanding of cancer biology and develop innovative strategies to
-        combat this disease.
+        Our research employs a combination of advanced techniques in cell biology, molecular biology, biochemistry, and single-cell multiomics, along with cell lineage barcoding, to explore the interplay between telomere function, innate immune signaling, and autophagy, and how these pathways synergize to suppress cancer initiation. Our overarching goal is to deepen our understanding of cancer biology and develop innovative strategies to combat this disease.
       </p>
       <ul class="about2">
         Currently, we are working on these aspects of telomere biology: 
-        <li>Proliferative barriers and cell immortalization</li>
+        <li>Telomere-based proliferative boundaries and cell immortalization</li>
         <li>
-          Crosstalk between telomeres, mitochondria, and innate immune signaling
-        </li>
-        <li>Autophagy and genomic consequences of telomere dysfunction</li>
+          Autophagy, cell death pathways, and cancer adaptations
+         </li>
+        <li>DNA damage-induced immune responses</li>
         <li>
-          Autophagy and telomere-driven cell death
+          Telomere-driven genomic instability
         </li>
-    
+    <li>Mitochondria-organelle contact sites and cellular aging
+    </li>
       </ul>
 
       <p class="about3">
